--- a/ProjectMvp/.classpath
+++ b/ProjectMvp/.classpath
@@ -21,6 +21,7 @@
 	<classpathentry kind="lib" path="lib/antlr-2.7.7.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-jdk14-1.5.2.jar"/>
 	<classpathentry kind="lib" path="swt/org.eclipse.swt.win32.win32.x86_64_3.103.2.v20150203-1351.jar"/>
+	<classpathentry kind="lib" path="algo.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Hibernate"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
