--- a/ProjectMvp/.classpath
+++ b/ProjectMvp/.classpath
@@ -22,6 +22,10 @@
 	<classpathentry kind="lib" path="lib/slf4j-jdk14-1.5.2.jar"/>
 	<classpathentry kind="lib" path="swt/org.eclipse.swt.win32.win32.x86_64_3.103.2.v20150203-1351.jar"/>
 	<classpathentry kind="lib" path="algo.jar"/>
+	<classpathentry kind="lib" path="swt/org.eclipse.swt.win32.win32.x86_3.7.1.v3738a.jar"/>
+	<classpathentry kind="lib" path="swt/swt-3.7.2-cocoa-macosx.jar"/>
+	<classpathentry kind="lib" path="swt/swt-3.7.2-gtk-linux-x86_64.jar"/>
+	<classpathentry kind="lib" path="swt/swt-3.7.2-gtk-linux-x86.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Hibernate"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
